<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lite_blue">

    <TextView
        android:id="@+id/error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:gravity="center"
        android:text="@string/choose_city_error_message_no_fields"
        android:textColor="@color/red"
        android:textSize="25dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/amatic_bold"
        android:gravity="center"
        android:text="@string/city_name_title"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/error_title" />


    <EditText
        android:id="@+id/city_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ -''"
        android:fontFamily="@font/amatic_regular"
        android:gravity="center"
        android:hint="@string/city_name"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_title" />

    <TextView
        android:id="@+id/lat_long_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amatic_bold"
        android:gravity="center"
        android:text="@string/lat_long_title"
        android:textSize="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name" />


    <EditText
        android:id="@+id/latitude"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:digits="1234567890."
        android:fontFamily="@font/amatic_regular"
        android:gravity="center"
        android:hint="@string/latitude"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lat_long_title" />

    <EditText
        android:id="@+id/longitude"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:digits="1234567890."
        android:fontFamily="@font/amatic_regular"
        android:gravity="center"
        android:hint="@string/longitude"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitude" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/to_cities_list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/amatic_regular"
            android:text="@string/to_cities_list_btn"
            android:visibility="visible" />

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/amatic_regular"
            android:text="@string/continue_btn" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>