<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="25dp">


    <TextView
        android:id="@+id/custom_cities_list_dialog_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/custom_cities_list_dialog_error"
        android:textColor="@color/red"
        android:textSize="15dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/custom_cities_list_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/product_sans_bold"
        android:gravity="center"
        android:text="@string/custom_cities_list_dialog_title"
        android:textSize="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_cities_list_dialog_error" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lat_long_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/buttons_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_cities_list_dialog_title">


        <EditText
            android:id="@+id/latitude_west"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:digits="1234567890."
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center"
            android:hint="@string/latitude_west"
            android:textSize="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/latitude_east"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:digits="1234567890."
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center"
            android:hint="@string/latitude_east"
            android:textSize="30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/latitude_north"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="1234567890."
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center"
            android:hint="@string/longitude_north"
            android:textSize="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/latitude_south"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:digits="1234567890."
            android:fontFamily="@font/product_sans_regular"
            android:gravity="center"
            android:hint="@string/longitude_south"
            android:textSize="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:weightSum="2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lat_long_layout">

        <Button
            android:id="@+id/custom_cities_list_dialog"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginRight="25dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/custom_cities_custom_btn" />

        <Button
            android:id="@+id/default_cities_list_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_weight="0.5"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/custom_cities_default_btn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>