<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">

    <fragment
        android:id="@+id/map_layout"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <TextView
        android:id="@+id/google_maps_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/product_sans_regular"
        android:text="@string/choose_location_title"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="25dp"
        android:visibility="gone"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/show_weather_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/show_weather_btn"
            android:textColor="@color/grey_54"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <Button
            android:id="@+id/show_area_radius"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:fontFamily="@font/product_sans_regular"
            android:text="@string/show_radius_btn"
            android:textColor="@color/grey_54"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>